--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -4,5 +4,11 @@ scala_version=2.9.0-1
 servlet_name=MongoDBServlet
 mongodb_host=localhost
 mongodb_port=27017
-mongodb_db=scalatra-mongodb-project
+mongodb_db=scala-akka-mongo-project
 mongodb_collection=msgs
+jetty_port=9011
+domain_name=domain
+product_name=product
+mongodb_test_db=scala-akka-mongo-project_test
+actor_name=MyActor
+spec_name=MySpec
