--- a/src/main/g8/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/g8/src/main/webapp/WEB-INF/web.xml
@@ -3,13 +3,17 @@
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 <web-app>
-  <servlet>
-    <servlet-name>$servlet_name$</servlet-name>
-    <servlet-class>$servlet_name$</servlet-class>
-  </servlet>
- 
-  <servlet-mapping>
-    <servlet-name>$servlet_name$</servlet-name>
-    <url-pattern>/*</url-pattern>
-  </servlet-mapping>
+    <listener>
+        <listener-class>com.$domain_name$.$product_name$.$name$.boot.Initializer</listener-class>
+    </listener>
+    <servlet>
+        <servlet-name>$servlet_name$</servlet-name>
+        <servlet-class>com.$domain_name$.$product_name$.$name$.$servlet_name$</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>$servlet_name$</servlet-name>
+        <url-pattern>/$name$/*</url-pattern>
+    </servlet-mapping>   
 </web-app>
